tests/error/comptime_arg_errors/const_mismatch1.py
from guppylang import guppy
from guppylang.std.builtins import comptime, nat


@guppy
def foo(n: nat @comptime) -> None:
    pass


@guppy
def main() -> None:
    foo[42](43)


guppy.compile(main)
