tests/error/comptime_arg_errors/const_mismatch1.err
Error: Value mismatch (at $FILE:12:12)
   | 
10 | @guppy
11 | def main() -> None:
12 |     foo[42](43)
   |             ^^ Expected constant `42`, got `43`

Guppy compilation failed due to 1 previous error
